# conformal-segmentation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
experiments/: README.md  crc_calibration.py  crc_test_metrics.py  postprocess_expes.py  process_all_opt_lambdas.sh  run_crc_binary_loss_ade20k.sh  run_crc_binary_loss_cityscapes.sh  run_crc_binary_loss_loveda.sh  run_crc_miscov_loss_ade20k.sh  run_crc_miscov_loss_cityscapes.sh  run_crc_miscov_loss_loveda.sh
experiments/metrics/: metrics_ade20k.sh  metrics_cityscapes.sh  metrics_loveda.sh
experiments/runners/: _config_TEMPLATE.json
experiments/runners/binary_loss/: ADE20K_config_binary.json  Cityscapes_config_binary.json  LoveDA_config_binary.json  LoveDA_config_binary_covratio_0.9.json
experiments/runners/miscoverage_loss/: ADE20K_config_miscoverage.json  Cityscapes_config_miscoverage.json  LoveDA_config_miscoverage.json
notebooks/paper/: make_figures.py  n70-expe-metrics-tables.ipynb  n71-expe-visu-cityscapes.ipynb  n72-expe-visu-ade20k.ipynb  n73-expe-visu-loveda.ipynb
scripts/: data_checks.py
scripts/downloaders/: download_mods_weights.ipynb
src/app/: app_threshold.py  app_vision.py  tools.py
src/cose/: _typing.py  conformal.py  datasets.py  experiments.py  models.py  preprocessing.py  utils.py  visual.py
