[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cose"
version = "0.0.1"
authors = [
    { name = "Luca Mossina", email = "luca.mossina@irt-saintexupery.com" },
]
description = "Some Python code to do uncertanty quantification in semantic segmentation via conformal prediction"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["numpy", "python-dotenv"]

[project.urls]
"Homepage" = "https://github.com/deel-ai-papers/conformal-segmentation"
